--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ blog_button:
     description: Visit blog
 
 # Navigation buttons in the front page.
-nav:
-    - {title: Projects, description: My Projects, url: 'http://project.onevcat.com'}
+#nav:
+    #- {title: Projects, description: My Projects, url: 'http://project.onevcat.com'}
     # - {title: Another Button, description: A button, url: 'http://example.com'}
 
 # Pagination
@@ -40,7 +40,7 @@ social:
     weibo: 5370899507
     github: linusboyle
     #twitter: onevcat
-    facebook: boyle.linus.5
+    #facebook: boyle.linus.5
     gplus: 106875862514148562818
     mail: hzl17@mails.tsinghua.edu.cn
 
