--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
     #twitter: onevcat
     #facebook: boyle.linus.5
     gplus: 106875862514148562818
-    mail: hzl17@mails.tsinghua.edu.cn
+    mail: linusboyle@gmail.com  
     bilibili: 18177890
 
 # Google Analytics
