--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: 风含翠篠娟娟净，雨裛红蕖冉冉香
 creator: <a href="https://github.com/linusboyle">@狷墨居主人</a>
 
 #请填写正确的域名
-url: "https://linusboyle.github.io"
+url: "https://linusboyle.cn"
 
 #目录层次结构 默认是年-月-标题
 permalink: /:year/:month/:title/
