--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ paginate_path: "page/:num/"
     
 # Social
 social:
-    weibo: @偏有宸机
+    weibo: 6300341967
     github: da1sy
     #twitter: onevcat
     #facebook: boyle.linus.5
