--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ blog_button:
 # Navigation buttons in the front page.
 nav:
     #- {title: Projects, description: My Projects, url: 'http://project.onevcat.com'}
-    #- {title: BiliBili, description: Bilibili homepage, url: 'https://space.bilibili.com/18177890'}
+    - {title: Qzone, description: Qzone., url: 'https://user.qzone.qq.com/3078187521'}
     - {title: About Me, description: description of myself in Chinese, url: '/2018/07/About-Me'}
 
 # Pagination
