--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ nav:
     - {title: 关于我, description: 关于狷墨居主人的介绍, url: '/AboutMe'}
     - {title: 归档, description: 文章归档, url: '/archives'}
     - {title: 标签, description: 文章标签索引, url: '/tags'}
+    - {title: 项目, description: 我的项目, url: '/projects'}
 
 plugins: 
     - jekyll-paginate
