--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ blog_button:
 nav:
     - {title: 归档, description: 文章归档, url: '/archives'}
     - {title: 标签, description: 文章标签索引, url: '/tags'}
-    - {title: 关于我, description: 关于狷墨居主人的介绍, url: '/AboutMe'}
-    - {title: 项目, description: 我的项目, url: '/projects'}
+    - {title: 关于我, description: 关于主人和这个小站, url: '/AboutMe'}
+    #- {title: 项目, description: 我的项目, url: '/projects'}
 
 plugins: 
     - jekyll-paginate
