--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,24 @@
 language: ruby
 rvm:
-  - 2.4.1
-
+- 2.4.1
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
-
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
-script: ./script/cibuild
-
-# branch whitelist, only for GitHub Pages
+- chmod +x ./script/cibuild
+script: "./script/cibuild"
 branches:
   only:
-  - master     # test the master branch
-  - /blog-(.*)/ # test every branch which starts with "blog-"
-
+  - master
+  - "/blog-(.*)/"
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 addons:
   apt:
     packages:
     - libcurl4-openssl-dev
-
-sudo: false # route your build to the container-based infrastructure for a faster build
-
-cache: bundler # caching bundler gem packages will speed up build
-
-# Optional: disable email notifications about the outcome of your builds
+sudo: false
+cache: bundler
 notifications:
   email: false
+before_install:
+- openssl aes-256-cbc -K $encrypted_27a4c214a7d1_key -iv $encrypted_27a4c214a7d1_iv
+  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
