--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,29 @@
 language: ruby
 rvm:
-- 2.4.1
+    - 2.4.1
+before_install:
+- openssl aes-256-cbc -K $encrypted_27a4c214a7d1_key -iv $encrypted_27a4c214a7d1_iv
+  -in ./.travis/id_rsa.enc -out ~\/.ssh/id_rsa -d
+
 before_script:
-- chmod +x ./script/cibuild
-script: "./script/cibuild"
+    - chmod +x ./.travis/cibuild
+script: "./.travis/cibuild"
+
 branches:
   only:
   - master
   - "/blog-(.*)/"
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+    - JEKYLL_ENV=production
+
 addons:
   apt:
     packages:
-    - libcurl4-openssl-dev
+        - libcurl4-openssl-dev
+
 sudo: false
 cache: bundler
 notifications:
   email: false
-before_install:
-- openssl aes-256-cbc -K $encrypted_27a4c214a7d1_key -iv $encrypted_27a4c214a7d1_iv
-  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
