--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: ruby
 rvm:
     - 2.4.1
 before_install:
-- mkdir ~/.ssh
-- touch ~/.ssh/id_rsa
-- openssl aes-256-cbc -K $encrypted_27a4c214a7d1_key -iv $encrypted_27a4c214a7d1_iv -in ./.travis/id_rsa.enc -out ~\/.ssh/id_rsa -d
+- openssl aes-256-cbc -K $encrypted_27a4c214a7d1_key -iv $encrypted_27a4c214a7d1_iv -in ./.travis/id_rsa.enc -out ~/.ssh/id_rsa -d
 
 before_script:
     - chmod +x ./.travis/cibuild
