--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # 基本信息
 title: 狷墨居
-subtitle: 狷墨居主人的个人天地
-welcome_message: 墨学爱好者，马克思主义者，戏曲听众，C/C++程序员。
-description: 风含翠篠娟娟净，雨裛红蕖冉冉香
+subtitle: 狷墨居主人的方寸天地
+welcome_message: 心事浩茫连广宇，于无声处听惊雷 
+description: 一个记录主人生活点滴、文学创作、技术心得的地方
 
 # 名称以及（可选的）额外主页
 creator: 
